--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -15,11 +15,93 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TJy-Je-2hu">
+                                <rect key="frame" x="0.0" y="99" width="600" height="501"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xgn-Im-8wG">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <color key="backgroundColor" red="1" green="0.1960784314" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="KhX-Wf-epX"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="RzG-4G-M1g">
+                                <rect key="frame" x="0.0" y="55" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="G9p-Je-j0s">
+                                <rect key="frame" x="20" y="121" width="560" height="459"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4w5-Fy-HiX">
+                                    <size key="itemSize" width="110" height="110"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="uXX-2o-AO0">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="10" translatesAutoresizingMaskIntoConstraints="NO" id="iHh-Mt-zIy">
+                                                    <rect key="frame" x="0.0" y="0.0" width="110" height="89"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4jD-v1-Xks">
+                                                    <rect key="frame" x="0.0" y="89" width="110" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.1960784314" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="q9h-Ak-HMk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="0.41000000000000003" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="iHh-Mt-zIy" firstAttribute="leading" secondItem="uXX-2o-AO0" secondAttribute="leading" id="11a-gI-1Gr"/>
+                                            <constraint firstAttribute="bottom" secondItem="4jD-v1-Xks" secondAttribute="bottom" id="AJz-Xc-2Uw"/>
+                                            <constraint firstItem="iHh-Mt-zIy" firstAttribute="top" secondItem="uXX-2o-AO0" secondAttribute="top" id="CGb-ff-j2T"/>
+                                            <constraint firstAttribute="trailing" secondItem="iHh-Mt-zIy" secondAttribute="trailing" id="Mg7-jt-xSU"/>
+                                            <constraint firstAttribute="trailing" secondItem="4jD-v1-Xks" secondAttribute="trailing" id="fY1-O7-ylb"/>
+                                            <constraint firstItem="4jD-v1-Xks" firstAttribute="leading" secondItem="uXX-2o-AO0" secondAttribute="leading" id="tfd-f3-ygr"/>
+                                            <constraint firstItem="4jD-v1-Xks" firstAttribute="top" secondItem="iHh-Mt-zIy" secondAttribute="bottom" id="uJW-Ng-js3"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="RzG-4G-M1g" secondAttribute="trailing" id="668-4Q-GsQ"/>
+                            <constraint firstItem="RzG-4G-M1g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="J72-E7-RME"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="G9p-Je-j0s" secondAttribute="bottom" constant="20" id="KNr-8M-1g9"/>
+                            <constraint firstItem="G9p-Je-j0s" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="PNI-ki-Uwc"/>
+                            <constraint firstItem="TJy-Je-2hu" firstAttribute="top" secondItem="RzG-4G-M1g" secondAttribute="bottom" id="Qnf-LW-yek"/>
+                            <constraint firstItem="Xgn-Im-8wG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="R59-U2-NF4"/>
+                            <constraint firstItem="TJy-Je-2hu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Vsn-gh-uRB"/>
+                            <constraint firstAttribute="trailing" secondItem="Xgn-Im-8wG" secondAttribute="trailing" id="YiE-sE-W1t"/>
+                            <constraint firstItem="RzG-4G-M1g" firstAttribute="top" secondItem="Xgn-Im-8wG" secondAttribute="bottom" id="ita-q8-Ea9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TJy-Je-2hu" secondAttribute="bottom" id="sQe-Jh-ZPo"/>
+                            <constraint firstAttribute="trailing" secondItem="TJy-Je-2hu" secondAttribute="trailing" id="y5E-Qc-KAc"/>
+                            <constraint firstAttribute="trailing" secondItem="G9p-Je-j0s" secondAttribute="trailing" constant="20" id="yWb-as-agR"/>
+                            <constraint firstItem="Xgn-Im-8wG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yXf-0u-Qw1"/>
+                            <constraint firstItem="G9p-Je-j0s" firstAttribute="top" secondItem="RzG-4G-M1g" secondAttribute="bottom" constant="22" id="zLg-qP-XNa"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="500" y="477"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="10" width="120" height="120"/>
+    </resources>
 </document>
