--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -3,6 +3,11 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Pokemon Solid.ttf">
+            <string>PokemonSolidNormal</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -21,9 +26,36 @@
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xgn-Im-8wG">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLn-1r-BGH">
+                                        <rect key="frame" x="215" y="0.0" width="170" height="55"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="ZzJ-L4-Chn"/>
+                                            <constraint firstAttribute="width" constant="170" id="g13-uc-8Cc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugR-p4-Z8H">
+                                        <rect key="frame" x="565" y="20" width="27" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="27" id="2XT-KP-Cvd"/>
+                                            <constraint firstAttribute="height" constant="27" id="Q1g-Om-F3O"/>
+                                        </constraints>
+                                        <state key="normal" image="music"/>
+                                        <connections>
+                                            <action selector="onToggelMusic:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZLG-2b-Yi0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.1960784314" blue="0.047058823530000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="WLn-1r-BGH" firstAttribute="centerY" secondItem="Xgn-Im-8wG" secondAttribute="centerY" id="HfL-7d-coO"/>
                                     <constraint firstAttribute="height" constant="55" id="KhX-Wf-epX"/>
+                                    <constraint firstAttribute="bottom" secondItem="ugR-p4-Z8H" secondAttribute="bottom" constant="8" id="YmW-dC-XsQ"/>
+                                    <constraint firstItem="WLn-1r-BGH" firstAttribute="centerX" secondItem="Xgn-Im-8wG" secondAttribute="centerX" id="eJd-ig-Gr9"/>
+                                    <constraint firstAttribute="trailing" secondItem="ugR-p4-Z8H" secondAttribute="trailing" constant="8" id="t1S-tW-XED"/>
                                 </constraints>
                             </view>
                             <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="RzG-4G-M1g">
@@ -111,5 +143,6 @@
     <resources>
         <image name="10" width="120" height="120"/>
         <image name="bg" width="1920" height="1200"/>
+        <image name="music" width="100" height="100"/>
     </resources>
 </document>
